Manager: add API function to change a job's worker tag
The API function `setJobTag` can be used to assign another worker tag to
the job, or to clear a job's worker tag. The new tag can be specified by
its name or by its UUID.

There is no UI yet to use this from the web interface.
