# addon/flamenco/manager/api/jobs_api.py
@@ -31,6 +31,7 @@ from flamenco.manager.model.job_last_rendered_image_info import JobLastRenderedI
 from flamenco.manager.model.job_mass_deletion_selection import JobMassDeletionSelection
 from flamenco.manager.model.job_priority_change import JobPriorityChange
 from flamenco.manager.model.job_status_change import JobStatusChange
+from flamenco.manager.model.job_tag_change import JobTagChange
 from flamenco.manager.model.job_tasks_summary import JobTasksSummary
 from flamenco.manager.model.jobs_query_result import JobsQueryResult
 from flamenco.manager.model.submitted_job import SubmittedJob
@@ -870,6 +871,62 @@ class JobsApi(object):
                 'location_map': {
                     'job_id': 'path',
                     'job_status_change': 'body',
+                },
+                'collection_format_map': {
+                }
+            },
+            headers_map={
+                'accept': [
+                    'application/json'
+                ],
+                'content_type': [
+                    'application/json'
+                ]
+            },
+            api_client=api_client
+        )
+        self.set_job_tag_endpoint = _Endpoint(
+            settings={
+                'response_type': None,
+                'auth': [],
+                'endpoint_path': '/api/v3/jobs/{job_id}/settag',
+                'operation_id': 'set_job_tag',
+                'http_method': 'POST',
+                'servers': None,
+            },
+            params_map={
+                'all': [
+                    'job_id',
+                    'job_tag_change',
+                ],
+                'required': [
+                    'job_id',
+                    'job_tag_change',
+                ],
+                'nullable': [
+                ],
+                'enum': [
+                ],
+                'validation': [
+                ]
+            },
+            root_map={
+                'validations': {
+                },
+                'allowed_values': {
+                },
+                'openapi_types': {
+                    'job_id':
+                        (str,),
+                    'job_tag_change':
+                        (JobTagChange,),
+                },
+                'attribute_map': {
+                    'job_id': 'job_id',
+                },
+                'location_map': {
+                    'job_id': 'path',
+                    'job_tag_change': 'body',
                 },
                 'collection_format_map': {
                 }
@@ -2343,6 +2400,87 @@ class JobsApi(object):
         kwargs['job_status_change'] = \
             job_status_change
         return self.set_job_status_endpoint.call_with_http_info(**kwargs)
+
+    def set_job_tag(
+        self,
+        job_id,
+        job_tag_change,
+        **kwargs
+    ):
+        """set_job_tag  # noqa: E501
+
+        This method makes a synchronous HTTP request by default. To make an
+        asynchronous HTTP request, please pass async_req=True
+
+        >>> thread = api.set_job_tag(job_id, job_tag_change, async_req=True)
+        >>> result = thread.get()
+
+        Args:
+            job_id (str):
+            job_tag_change (JobTagChange): The name or the UUID of the new tag. It replaces the old tag.
+
+        Keyword Args:
+            _return_http_data_only (bool): response data without head status
+                code and headers. Default is True.
+            _preload_content (bool): if False, the urllib3.HTTPResponse object
+                will be returned without reading/decoding response data.
+                Default is True.
+            _request_timeout (int/float/tuple): timeout setting for this request. If
+                one number provided, it will be total request timeout. It can also
+                be a pair (tuple) of (connection, read) timeouts.
+                Default is None.
+            _check_input_type (bool): specifies if type checking
+                should be done one the data sent to the server.
+                Default is True.
+            _check_return_type (bool): specifies if type checking
+                should be done one the data received from the server.
+                Default is True.
+            _spec_property_naming (bool): True if the variable names in the input data
+                are serialized names, as specified in the OpenAPI document.
+                False if the variable names in the input data
+                are pythonic names, e.g. snake case (default)
+            _content_type (str/None): force body content-type.
+                Default is None and content-type will be predicted by allowed
+                content-types and body.
+            _host_index (int/None): specifies the index of the server
+                that we want to use.
+                Default is read from the configuration.
+            async_req (bool): execute request asynchronously
+
+        Returns:
+            None
+                If the method is called asynchronously, returns the request
+                thread.
+        """
+        kwargs['async_req'] = kwargs.get(
+            'async_req', False
+        )
+        kwargs['_return_http_data_only'] = kwargs.get(
+            '_return_http_data_only', True
+        )
+        kwargs['_preload_content'] = kwargs.get(
+            '_preload_content', True
+        )
+        kwargs['_request_timeout'] = kwargs.get(
+            '_request_timeout', None
+        )
+        kwargs['_check_input_type'] = kwargs.get(
+            '_check_input_type', True
+        )
+        kwargs['_check_return_type'] = kwargs.get(
+            '_check_return_type', True
+        )
+        kwargs['_spec_property_naming'] = kwargs.get(
+            '_spec_property_naming', False
+        )
+        kwargs['_content_type'] = kwargs.get(
+            '_content_type')
+        kwargs['_host_index'] = kwargs.get('_host_index')
+        kwargs['job_id'] = \
+            job_id
+        kwargs['job_tag_change'] = \
+            job_tag_change
+        return self.set_job_tag_endpoint.call_with_http_info(**kwargs)
 
     def set_task_status(
         self,
